<resources>
    <string name="app_name">PandemicApp</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="create_an_account_to_report_corona_virus">Create an account to report Corona-Virus</string>
    <string name="personal_account">Personal Account</string>
    <string name="log_in_an_account_to_report_corona_virus">Log in an account to report Corona-Virus</string>
    <string name="title_activity_maps">Map</string>
    <string name="Where_is_the_virus">Where is the Virus?</string>
    <string name="notifications">Notifications</string>
    <string name="reportVirus">Report Virus</string>
    <string name="defaultCityName">Warsaw</string>
    <string name="defaultRadiusOnMap">within 100m radius</string>
    <string name="within">within</string>
    <string name="radius">m radius</string>
    <string name="location_of_virus">Location of Virus</string>
    <string name="is_somebody_tested_positive_for_the_corona_virus">Is somebody tested positive for the Corona Virus?</string>
    <string name="edit">Edit</string>
    <string name="yes">Yes</string>
    <string name="pending">Pending</string>
    <string name="no">No</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="setLocation">Set location of Virus:</string>
    <string name="mov_map_or_type">moveMap or type address below</string>
    <string name="confirmLocation">CONFIRM LOCATION</string>
    <string name="search">Search</string>
    <string name="unknownLocation">Unknown location</string>
    <string name="address_hint">road with number, city</string>
    <string name="add_new_one">Add New One</string>
    <string name="see_the_map">See The Map</string>
    <string name="your_report_is_added">Your report is added</string>
    <string name="checking">Loading</string>
    <string name="term_and_policies">Term and Policies</string>
    <string name="Cancel">Cancel</string>
    <string name="info_text">By clicking Submit, you agree that you read and understand our</string>
    <string name="Sort_by">"Sort by: "</string>
    <string name="closest_location">Closest Location</string>
    <string name="recent_date">Recent Date</string>
    <string name="my_city">My city</string>
    <string name="my_country">My country</string>
    <string name="All">All</string>
    <string name="Confirmed">Confirmed</string>
    <string name="Self_reported">Self reported</string>
    <string name="Distance">Radius</string>
    <string name="dontknow">I don\'t know</string>
    <string name="fever">Fever</string>
    <string name="cough">Cough</string>
    <string name="breathlessness">Shortness of Breath</string>
    <string name="let_s_stop_virus">Let\'s stop virus</string>
    <string name="add">Add</string>
    <string name="no_permission">App doesn\'t have permission for your current location or location not found</string>
    <string name="new_report">New virus case in your area</string>
    <string name="alert">Alert!</string>
    <string name="where_is_virus">Where is Virus?</string>
    <string name="show_notifications">Show notifications</string>
    <string name="notify_with">Notify with:</string>
    <string name="added_around">Added around:</string>
    <string name="radius_of_action">Radius of action</string>
    <string name="reset_filters">Reset Filters</string>
    <string name="near">near</string>
    <string name="no_location">location not found</string>
    <string name="from">From</string>
    <string name="Filters">Filters</string>
    <string name="show_only">Show only</string>
    <string name="added">Added:</string>
    <string name="for24">For 24 H</string>
    <string name="for2Weeks">For 2 WEEKS</string>
    <string name="pass">1 capital letter, 1 small letter, 1 number, 8-10 characters</string>
    <string name="result">Corona Virus test: </string>
    <string name="are_there_symptoms_of_the_corona_virus">Are there symptoms of the Corona Virus?</string>
    <string name="more"><u>More</u></string>
    <string name="symptoms">Symptoms</string>
    <string name="not_a_valid_email">Not a valid email</string>
    <string name="not_a_valid_name">Empty name</string>
    <string name="pick_date">Pick date</string>
    <string name="tested" translatable="false">Tested</string>
    <string name="change_photo">Change photo</string>
    <string name="profile">User profile</string>
    <string name="delete_photo">Delete photo</string>
    <string name="save_changes">Save changes</string>
    <string name="type_name">Type your name</string>
    <string name="type_email">Type your e-mail</string>
    <string name="not_updated">Updating failed</string>
    <string name="updated">Updated data</string>

    <string name="facebook_application_id" translatable="false">875080606323612</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb875080606323612</string>
    <string name="welcomeMess">Keep yourself safe by checking nearby locations and reporting spots with high probability of getting infected with COVID-19.</string>

</resources>
