<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".fragments.ProfileFragment">

    <TextView
        android:id="@+id/tvProfile"
        android:layout_width="154dp"
        android:layout_height="24dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/profile"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/ic_arrow_back_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/no_profile_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvProfile" />

    <Button
        android:id="@+id/btnDeletePhoto"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_button"
        android:text="@string/delete_photo"
        android:textAllCaps="false"
        app:layout_constraintEnd_toStartOf="@id/btnChangePhoto"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/ivProfileImage" />
    <Button
        android:id="@+id/btnChangePhoto"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:background="@drawable/rounded_button"
        android:text="@string/change_photo"
        android:textAllCaps="false"
        app:layout_constraintStart_toEndOf="@id/btnDeletePhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivProfileImage" />

    <TextView
        android:id="@+id/tvNamePlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/name"
        android:textColor="@color/grey"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnChangePhoto" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/type_name"
        android:background="@null"
        android:layout_marginStart="15dp"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNamePlace"
        tools:text="michal" />
    <TextView
        android:id="@+id/tvValidName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/not_a_valid_name"
        android:visibility="gone"
        android:textColor="@color/redButtonColor"
        android:textSize="11sp"
        app:layout_constraintTop_toBottomOf="@id/etName"
        app:layout_constraintStart_toStartOf="@id/etName" />


    <TextView
        android:id="@+id/tvEmailPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textColor="@color/grey"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvValidName" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:hint="@string/type_email"
        android:background="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEmailPlace"
        tools:text="michal@michal.pl" />
    <TextView
        android:id="@+id/tvValidEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_a_valid_email"
        android:textColor="@color/redButtonColor"
        android:visibility="gone"
        android:textSize="11sp"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintStart_toStartOf="@id/etEmail" />
    <Button
        android:id="@+id/btnSaveChanges"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:background="@drawable/singup_button"
        android:fontFamily="sans-serif"
        android:text="@string/save_changes"
        android:textColor="@color/permanentWhite"
        app:layout_constraintTop_toBottomOf="@id/etEmail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>