<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:id="@+id/register_container"
    tools:context=".fragments.RegistrationScreenFragment">

    <Button
        android:id="@+id/signupButton"
        android:layout_width="282dp"
        android:layout_height="52dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/singup_button"
        android:fontFamily="sans-serif"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/permanentWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="126dp"
        android:layout_height="44dp"
        android:layout_marginBottom="34dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="sans-serif"
        android:text="@string/log_in"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:background="@drawable/borderless_edittext"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/passwordEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="64dp"
        android:ems="10"
        android:hint="@string/password"
        android:gravity="center"
        android:background="@drawable/borderless_edittext"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/signupButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:ems="10"
        android:hint="@string/name"
        android:gravity="center"
        android:background="@drawable/borderless_edittext"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/emailEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="248dp"
        android:layout_height="86dp"
        android:layout_marginTop="26dp"
        android:gravity="center"
        android:text="@string/create_an_account_to_report_corona_virus"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeAccount" />

    <TextView
        android:id="@+id/typeAccount"
        android:layout_width="154dp"
        android:layout_height="24dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/personal_account"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="12dp"
        android:layout_height="13dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_person_outline_black_24dp"
        app:layout_constraintBottom_toTopOf="@+id/emailEditText"
        app:layout_constraintEnd_toEndOf="@+id/nameEditText"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="@+id/nameEditText"
        app:layout_constraintTop_toTopOf="@+id/nameEditText" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="12dp"
        android:layout_height="13dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_mail_outline_black_24dp"
        app:layout_constraintBottom_toTopOf="@+id/passwordEditText"
        app:layout_constraintEnd_toEndOf="@+id/emailEditText"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="@+id/emailEditText"
        app:layout_constraintTop_toTopOf="@+id/emailEditText" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="12dp"
        android:layout_height="13dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_lock_open_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/passwordEditText"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="@+id/passwordEditText"
        app:layout_constraintTop_toTopOf="@+id/passwordEditText"
        app:layout_constraintVertical_bias="0.702" />

    <TextView
        android:id="@+id/validName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/not_a_valid_name"
        android:textColor="@color/redButtonColor"
        android:textSize="11sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/emailEditText"
        app:layout_constraintEnd_toEndOf="@+id/nameEditText"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/nameEditText" />

    <TextView
        android:id="@+id/validEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_a_valid_email"
        android:layout_marginBottom="4dp"
        android:textColor="@color/redButtonColor"
        android:textSize="11sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/emailEditText"
        app:layout_constraintEnd_toEndOf="@+id/emailEditText"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/emailEditText" />

    <TextView
        android:id="@+id/validPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass"
        android:layout_marginBottom="4dp"
        android:textColor="@color/redButtonColor"
        android:textSize="11sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/passwordEditText"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/passwordEditText" />
</androidx.constraintlayout.widget.ConstraintLayout>